# spoorthy-erp

./: .cursorrules  .env.example  .gitignore  Dockerfile  PHASE_1A_EXECUTION_BOARD.md  README.md  SPOORTHY_MASTER_PROMPT_1.md  alebic.ini  alembic.ini  all-emails.txt  all-phones.txt  app.py  asgi.py  audit_erp.py  build_erp_light.py  build_ollama.py  build_prompt.txt  complete_test.sh  docker-compose.override.yml  docker-compose.yml  find_column_errors.py  find_column_errors_enhanced.py  fix_accounts_imports.py  fix_duplicate_models.py  fix_orm_mode.py  fix_party_model.py  init_db.py  main.py  monitoring.py  payroll_ui.py  pdf_invoice.py  plan.md  postman_collection.json  pyrightconfig.json  quantum_ui.py  railway.toml  refactor_project.py  requirements-dev.txt  requirements.txt  restart_streamlit.sh  (+11 more)
.claude/: settings.local.json
.github/workflows/: autofix.yml  cd.yml  (+6 more)
db/: schema.py  schema.sql  seed.py  seed.sql
helm/: Chart.yaml  values.yaml
k8s/: deployment.yaml  ingress.yaml  service.yaml
migrations/: env.py
monitoring/: Dockerfile.alertmanager  Dockerfile.prometheus  alert_rules.yml  alertmanager.yml  prometheus.yml
nginx/: Dockerfile  nginx.conf
quantum-engine/: Dockerfile  quantum_engine.py  requirements.txt
scripts/: add_type_hints.py  exports.py  fix_imports.py  manage.py  scheduler.py
services/: erp_api.py
tests/: conftest.py  test_api.py  test_models.py
ui/: app.py
ui/react/src-tauri/: Cargo.toml  tauri.conf.json
ui/react/src-tauri/capabilities/: default.json
ui/react/src-tauri/icons/: icon.icns
ui/react/src-tauri/src/: main.rs
(+279 files in other folders)
