[package]
name = "spoorthy-erp-desktop"
version = "0.1.0"
description = "Spoorthy ERP Desktop"
authors = ["Spoorthy"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.79"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
